package com.ark.component.statemachine.core;

import lombok.Data;

@Data
public class Event<E> {

    private String id;

}
